fix(profile): 个人主页多处修正，并取消群聊的 VIP 扩容
群聊上限原本按群主 VIP 分三档（人数 100/200/350，建群 3/10/30）。
副作用很难看：群主 VIP 一到期，上限从 350 掉回 100，一个 250 人的群
立刻被判成 OVER_LIMIT_LOCKED，群里的人什么都没做却进不来新人——
等于用付费状态惩罚无关的第三方。而且触发点在读查询里，谁刷列表谁触发。
统一取原最高档：取消一个权益不应该让任何人变差，存量被锁的群下次被
读到时会自动算回 NORMAL。OVER_LIMIT_LOCKED 枚举保留，DB 里可能有存量值。

点赞列表原本按点赞记录分页、再逐条取帖子且不看状态：作者把帖子改回
审核中或被拒之后照样展示，点进去又被详情页挡回来。而且 total 是点赞数、
records 会被过滤，页码和条数对不上。改成先筛出仍可见的帖子再分页；
顺带消掉 N+1——原来每条一次查帖子加一次跨域 Feign 查作者，一页 8 条
就是 8 次 Feign。

收藏夹：
- 默认收藏夹此前只挡了删除，改名和封面完全没挡，前后端都补上。
  前端要先挡住，否则封面会先传上 OSS 再被后端拒绝，留下孤儿文件
- 收藏夹名可设为公开并展示在个人主页，是个公开文案位，而帖子标题、
  昵称、简介都要过审，这里一点都不审。接入 AI 文本审核（服务不可用时
  放行，影响面远小于帖子），并加 10 秒改名防抖
- 补数量上限 20

群聊列表：
- 本人主页走的是"全站公开群"接口、别人主页走"该用户创建的群"，
  同一个 tab 两种语义，自己创建的群反而混在全站列表里找不到
- refreshGroupLimitStatus 在读查询里刷 update_time，而公开群列表正是
  按它倒序——纠正一次状态就把这个群顶到最前面，改为锁住原值
- fillViewerRelation 每个群 2 次查询，一页 5 个就是 10 次，改批量
- 前端不再拉 100 条会话自己判断是否已加入，直接用后端的 currentUserJoined

关注/粉丝搜索原本先把全部关注关系无分页捞出来（5000 粉丝就是 5000 行）
再 IN 查用户表，改成按昵称先筛用户；顺带转义 LIKE 的 % 和 _。

其他：拦截器对非零码已经 reject 并提示，所以 5 处 else ElMessage 和
4 处 code !== 0 都是死分支，而 8 个函数只有 finally 没有 catch，
一直在漏未处理的 Promise rejection，一并补齐；背景图去掉已下线的
默认兜底图；saveProfileReturnState 补 try/catch，避免隐私模式下打断跳转。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>