@@ -30,13 +30,19 @@ import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 public class ArticleLikeServiceImpl implements ArticleLikeService {
+
+    private static final byte DELETE_TRUE = 1;
+    private static final byte STATE_FORBIDDEN = 1;
 
     @Autowired
     private ArticleLikeMapper articleLikeMapper;
@@ -136,37 +142,76 @@ public class ArticleLikeServiceImpl implements ArticleLikeService {
     public PageResult<ArticleListByLikeResponse> queryArticleListForLikeWithPage(Long userId, Integer pageNum, Integer pageSize) {
         int validPageNum = PageUtils.getValidPageNum(pageNum);
         int validPageSize = PageUtils.getValidPageSize(pageSize);
-        Page<ArticleLike> page = PageUtils.getPage(validPageNum, validPageSize);
-        Page<ArticleLike> result = articleLikeMapper.selectPage(page, new LambdaQueryWrapper<ArticleLike>()
+        // 原本按点赞记录分页，再逐条取帖子且不看状态：作者把帖子改回审核中或被拒之后，
+        // 点赞列表照样展示，点进去又被详情页挡回来。而且 total 是点赞数、records 会被
+        // 过滤，页码和条数对不上。改成先按可见帖子把点赞记录筛出来，再分页
+        List<Long> visibleLikedIds = listVisibleLikedArticleIds(userId);
+        long total = visibleLikedIds.size();
+        int fromIndex = Math.min((validPageNum - 1) * validPageSize, visibleLikedIds.size());
+        int toIndex = Math.min(fromIndex + validPageSize, visibleLikedIds.size());
+        List<Long> pageIds = visibleLikedIds.subList(fromIndex, toIndex);
+        List<ArticleListByLikeResponse> records = buildLikeResponses(pageIds);
+        long pages = total == 0 ? 0 : (total + validPageSize - 1) / validPageSize;
+        return new PageResult<>(records, total, validPageNum, validPageSize,
+                pages, visibleLikedIds.size() > toIndex);
+    }
+
+    // 按点赞时间倒序取出「当前仍然可见」的帖子 ID
+    private List<Long> listVisibleLikedArticleIds(Long userId) {
+        List<ArticleLike> likes = articleLikeMapper.selectList(new LambdaQueryWrapper<ArticleLike>()
                 .eq(ArticleLike::getUserId, userId)
                 .orderByDesc(ArticleLike::getCreateTime)
-                .orderByDesc(ArticleLike::getId));
-        List<ArticleListByLikeResponse> records = result.getRecords().stream()
-                .map(this::buildLikeResponse)
-                .filter(java.util.Objects::nonNull)
-                .collect(Collectors.toList());
-        return new PageResult<>(records, result.getTotal(), validPageNum, validPageSize,
-                result.getPages(), result.hasNext());
+                .orderByDesc(ArticleLike::getId)
+                .select(ArticleLike::getArticleId, ArticleLike::getCreateTime, ArticleLike::getId));
+        if (likes.isEmpty()) {
+            return List.of();
+        }
+        List<Long> orderedIds = likes.stream().map(ArticleLike::getArticleId).distinct().toList();
+        Set<Long> visible = articleMapper.selectList(new LambdaQueryWrapper<Article>()
+                        .in(Article::getId, orderedIds)
+                        .eq(Article::getStatus, ArticleStatus.PUBLISHED.getCode())
+                        .ne(Article::getDeleteState, DELETE_TRUE)
+                        .ne(Article::getState, STATE_FORBIDDEN)
+                        .select(Article::getId))
+                .stream().map(Article::getId).collect(Collectors.toSet());
+        return orderedIds.stream().filter(visible::contains).toList();
+    }
+
+    // 原本每条记录一次查帖子 + 一次跨域 Feign 查作者，一页 8 条就是 8 次 Feign
+    private List<ArticleListByLikeResponse> buildLikeResponses(List<Long> articleIds) {
+        if (articleIds.isEmpty()) {
+            return List.of();
+        }
+        Map<Long, Article> articleMap = articleMapper.selectList(new LambdaQueryWrapper<Article>()
+                        .in(Article::getId, articleIds))
+                .stream().collect(Collectors.toMap(Article::getId, item -> item));
+        Set<Long> authorIds = articleMap.values().stream()
+                .map(Article::getUserId).filter(java.util.Objects::nonNull).collect(Collectors.toSet());
+        Map<Long, UserInternalVO> userMap = authorIds.isEmpty()
+                ? Map.of()
+                : userService.loadActiveUsers(authorIds);
+        List<ArticleListByLikeResponse> out = new ArrayList<>(articleIds.size());
+        for (Long articleId : articleIds) {
+            Article article = articleMap.get(articleId);
+            if (article == null) {
+                continue;
+            }
+            UserInternalVO user = userMap.get(article.getUserId());
+            if (user == null) {
+                continue;
+            }
+            ArticleListByLikeResponse item = new ArticleListByLikeResponse();
+            item.setArticle(article);
+            item.setUser(org.pluchon.forum.converter.ContentUserBriefConverter.toBrief(user));
+            out.add(item);
+        }
+        return out;
     }
 
     @Override
     public PageResult<ArticleListByLikeResponse> queryUserArticleListForLikeWithPage(
             Long userId, Integer pageNum, Integer pageSize) {
         return queryArticleListForLikeWithPage(userId, pageNum, pageSize);
-    }
-
-    private ArticleListByLikeResponse buildLikeResponse(ArticleLike like) {
-        try {
-            Article article = articleService.selectArticleByArticleId(like.getArticleId());
-            UserInternalVO user = userService.queryUserByUserId(article.getUserId());
-            ArticleListByLikeResponse item = new ArticleListByLikeResponse();
-            item.setArticle(article);
-            item.setUser(org.pluchon.forum.converter.ContentUserBriefConverter.toBrief(user));
-            return item;
-        } catch (ApplicationException e) {
-            log.warn("点赞列表中帖子 {} 已不可用，跳过", like.getArticleId());
-            return null;
-        }
     }
 
 }
